# delerium-paste

./: .bazelignore  .bazelrc  .cursorignore  .cursorrules  .env.example  .gitattributes  .gitignore  .gitigore  .markdownlint.json  .vpsconfig  AGENTS.md  ALPHA_RELEASE_TODO.md  CHANGELOG.md  CHANGES_SUMMARY.md  CI_CD_QUICK_REFERENCE.md  CI_FIXES_FINAL_SUMMARY.md  CI_FIXES_SUMMARY.md  CI_OPTIMIZATION_ANALYSIS.md  CLAUDE.md  CLI_CONSOLIDATION_COMPLETE.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DELIVERABLES.md  DEPLOYMENT_SUMMARY.md  DEPLOY_QUICK_REFERENCE.md  DEPLOY_TO_VPS.md  DOCUMENTATION_INDEX.md  EXEC_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MIGRATION_COMPLETE.md  MIGRATION_NOTICE.md  MODULE.bazel  MULTI_ARCH_IMPLEMENTATION.md  Makefile  PARITY_IMPLEMENTATION_COMPLETE.md  POST_MERGE_PLAN.md  PR_DESCRIPTION.md  PR_PHASE1_DESCRIPTION.md  PR_PHASE3_DESCRIPTION.md  (+29 more)
.cursor/.agent-tools/: fc50b86e-928d-4e7f-a81e-11b68a8ee247.txt
.cursor/rules/: ai-collaboration.md  pr-review.md  testing-requirements.md  testing.md  typescript.md  workspace.md
.github/: CODEOWNERS  PR-001-GITHUB.md  PR_BOT_EXAMPLE.md  pull_request_template.md
.github/workflows/: auto-release.yml  claude-code-review.yml  claude.yml  client-ci.yml  cursor-agent-review.yml  deploy.yml  docker-hub-server.yml  docker-publish.yml  docker-publish.yml.disabled  pr-checks.yml  pr-description-bot.yml  pr-review-test.yml  pr-review.yml  release.yml  security-scan.yml  server-ci.yml  version-bump.yml
.husky/: README.md  pre-commit  pre-push
.vscode.example/: tasks.json
client/: .eslintcache  .gitignore  delete.html  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  view.html
client/coverage/: index.html  lcov.info  security.ts.html
client/coverage/crypto/: aes-gcm.ts.html  encoding.ts.html  index.html  index.ts.html
client/coverage/lcov-report/: index.html  security.ts.html
client/coverage/models/: index.html  (+1 more)
client/src/: app.ts  delete.ts  security.ts
client/styles/: chat.css  components.css  design-system.css  loading.css  mobile.css  modals.css  pages.css
client/tests/: README.md  dom.test.ts  encryption.test.ts  security.test.ts  setup.ts  utils.test.ts
docs/: BRANCH_PROTECTION_FIX.md  CLI.md  CONSOLIDATION_SUMMARY.md  CURSOR-PR-REVIEW.md  DEPLOYMENT.md  DEPLOYMENT_FIXES.md  DEPLOYMENT_IMPACT.md  MIGRATION.md  POW_VERIFICATION_GUIDE.md  README.md  REGRESSION_ANALYSIS.md  SECURITY_SCANNING.md  SSL_SETUP_GUIDE.md  TESTING.md  TEST_IMPLEMENTATION_SUMMARY.md  VPS_DEPLOYMENT.md
docs/architecture/: C4-DIAGRAMS.md  PROOF_OF_WORK.md
docs/archive/: CHANGELOG.md  CHANGES_SUMMARY.md  CONTRIBUTING.md  DECOMPOSITION_PLAN.md  DOCUMENTATION_CLEANUP_SUMMARY.md  LOCAL_TEST_RESULTS.md  MIGRATION_NOTICE.md  MIGRATION_SUCCESS.md  MULTI_ARCH_IMPLEMENTATION.md  PARITY_IMPLEMENTATION_COMPLETE.md  POST_MERGE_PLAN.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_AFTER_MERGE.md  TEST_COVERAGE_RULES.md  VISUAL_SUMMARY.txt
docs/contributing/: CURSOR-PR-REVIEW.md  CURSOR_MIGRATION.md
docs/deployment/: AUTO_DEPLOYMENT.md  CI_CD_ARCHITECTURE.md  CI_CD_CONSOLIDATION.md  DEPLOYMENT.md  DEPLOY_QUICK_REFERENCE.md  MONITORING.md  SSL_SETUP.md  UNIFIED_DEPLOYMENT.md  VPS_EXAMPLE.md  multi-architecture.md
docs/development/: ALPHA_RELEASE_TODO.md  BAZEL_MIGRATION.md  BAZEL_QUICKSTART.md  COMMIT_SIGNING.md  MIGRATION_COMPLETE.md  POW_VERIFICATION.md  REFACTORING-PLAN.md  WORKFLOW_USAGE.md  workflow-optimization.md
docs/features/: ANONYMOUS-CHAT.md
docs/getting-started/: SETUP.md
docs/github-automation/: PR_AUTOMATION.md
docs/prs/: ARCHITECTURE-DIAGRAM.md  PR-001-CRYPTO-MODULE.md  QUICK-START.md  README.md
docs/random/: DEPLOY_QUICK_REFERENCE.md  MIGRATION_STATUS.md  PR_DESCRIPTION.md  PR_PHASE1_DESCRIPTION.md  PR_PHASE2_DESCRIPTION.md  PR_PHASE3_DESCRIPTION.md  PR_PHASE4_DESCRIPTION.md  README.md  VALIDATION_SUMMARY.md  run-phase2-pr.sh  run-phase4-pr.sh
docs/releases/: v1.0.10.md
docs/security/: CHECKLIST.md  README.md  SCANNING.md
docs/versioning/: VERSION_BUMPING.md
metrics-sidecar/: Dockerfile  go.mod  main.go
monitoring/prometheus/: prometheus.yml
reverse-proxy/: default.conf  dev.conf  nginx-dev.conf  nginx-ssl.conf  nginx.conf
reverse-proxy/secure/: security.conf
scripts/: DEMO_SETUP.md  README.md  backup.sh  bump-version.sh  check-bazel.sh  ci-verify-all.sh  ci-verify-backend.sh  ci-verify-frontend.sh  ci-verify-quick.sh  cleanup-local-branches.zsh  deploy-prod.sh  deploy.sh  dev.sh  generate-pr-description.sh  health-check.sh  install-headless.sh  monitor.sh  post-merge-release.sh  pre-pr-check.sh  prod-logs.sh  prod-status.sh  prod-stop.sh  push-to-vps.sh  quick-start.sh  review-pr-with-ai.sh  review-pr.sh  security-check.sh  security-scan.sh  security-setup.sh  setup-bazel.sh  setup-ssl.sh  setup-vps-from-local.sh  setup.sh  sync-to-standalone.sh  test-deployment-cors.sh  vps-deploy.sh
scripts/legacy/: health-check.sh  prod-stop.sh  quick-start.sh
secrets/: data-enc-keyring.json.example  deletion-token-pepper.txt.example
server/: BUILD.bazel  Dockerfile  Dockerfile.backup  README.md  application-dev.conf  bazel-build.sh  build.gradle.kts  docker-build.sh  run-local.sh  settings.gradle.kts  test-docker-local.sh
server/.github/: CODEOWNERS
server/docs/: API.md  CONTAINER_PUBLISHING.md
server/src/main/kotlin/: App.kt  DataKeyManager.kt  Metrics.kt  Models.kt  Pow.kt  RateLimiter.kt  Routes.kt  Storage.kt  Utils.kt
server/src/main/resources/: application.conf  log4j2.xml
server/src/test/kotlin/: FailedAttemptTrackerTest.kt  IntegrationTest.kt  README.md  RoutesTest.kt  StorageTest.kt  TestUtils.kt
server/src/test/kotlin/integration/: CorsIntegrationTest.kt  PasteLifecycleIntegrationTest.kt  PowIntegrationTest.kt  RateLimitingIntegrationTest.kt  SecurityIntegrationTest.kt  ViewLimitIntegrationTest.kt
server/src/test/kotlin/routes/: ChatRouteSecurityTest.kt  CreatePasteRouteTest.kt  DeletePasteRouteTest.kt  DeleteWithAuthRouteTest.kt  GetPasteRouteTest.kt  HealthRouteTest.kt  InternalStatsRouteTest.kt  PowRouteTest.kt
(+116 files in other folders)
