module(
    name = "delerium_paste",
    version = "1.0.0",
)

# Kotlin rules for Bazel
bazel_dep(name = "rules_kotlin", version = "1.9.6")

# Maven dependency resolution (Bzlmod-compatible)
bazel_dep(name = "rules_jvm_external", version = "5.3")

# Use maven extension
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Maven dependencies from build.gradle.kts
maven.install(
    artifacts = [
        # Ktor dependencies
        "io.ktor:ktor-server-core-jvm:3.0.2",
        "io.ktor:ktor-server-netty-jvm:3.0.2",
        "io.ktor:ktor-server-content-negotiation-jvm:3.0.2",
        "io.ktor:ktor-serialization-jackson-jvm:3.0.2",
        "io.ktor:ktor-server-cors-jvm:3.0.2",
        "io.ktor:ktor-server-compression-jvm:3.0.2",
        "io.ktor:ktor-server-call-logging-jvm:3.0.2",
        "io.ktor:ktor-server-rate-limit-jvm:3.0.2",
        # Logging
        "org.apache.logging.log4j:log4j-core:2.24.0",
        "org.apache.logging.log4j:log4j-slf4j2-impl:2.24.0",
        # Database
        "org.jetbrains.exposed:exposed-core:0.54.0",
        "org.jetbrains.exposed:exposed-dao:0.54.0",
        "org.jetbrains.exposed:exposed-jdbc:0.54.0",
        "com.zaxxer:HikariCP:5.1.0",
        "org.xerial:sqlite-jdbc:3.49.1.0",
        # Crypto
        "org.bouncycastle:bcprov-jdk18on:1.80",
        # Test dependencies
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.18.1",
        "junit:junit:4.13.2",
        "org.jetbrains.kotlin:kotlin-test-junit:2.0.21",
        "io.ktor:ktor-server-test-host-jvm:3.0.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = True,
)

use_repo(maven, "maven")
