module(
    name = "delerium_paste",
    version = "1.0.10",
)

# Java rules for Bazel (provides JDK toolchain)
bazel_dep(name = "rules_java", version = "8.14.0")

# Kotlin rules for Bazel
bazel_dep(name = "rules_kotlin", version = "1.9.6")

# Maven dependency resolution (Bzlmod-compatible)
bazel_dep(name = "rules_jvm_external", version = "6.3")

# Use maven extension
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Maven dependencies for the server
# Note: Ktor 3.2+ requires Kotlin 2.1; rules_kotlin 1.9 uses Kotlin 1.9. Stay on 3.0.x until rules_kotlin supports Kotlin 2.x.
# Netty 4.1.130 overrides transitives from Ktor to address CVE-2025-55163, CVE-2025-24970, CVE-2025-58057, CVE-2025-67735, CVE-2025-25193.
# Log4j 2.25.3 addresses CVE-2025-68161 (2.24.1).
maven.install(
    artifacts = [
        # Ktor dependencies
        "io.ktor:ktor-server-core-jvm:3.0.2",
        "io.ktor:ktor-server-netty-jvm:3.0.2",
        "io.ktor:ktor-server-content-negotiation-jvm:3.0.2",
        "io.ktor:ktor-serialization-jackson-jvm:3.0.2",
        "io.ktor:ktor-server-cors-jvm:3.0.2",
        "io.ktor:ktor-server-compression-jvm:3.0.2",
        "io.ktor:ktor-server-call-logging-jvm:3.0.2",
        "io.ktor:ktor-server-rate-limit-jvm:3.0.2",
        # Netty overrides (security: CVE-2025-* on 4.1.115)
        "io.netty:netty-codec-http2:4.1.130.Final",
        "io.netty:netty-handler:4.1.130.Final",
        "io.netty:netty-codec:4.1.130.Final",
        "io.netty:netty-codec-http:4.1.130.Final",
        "io.netty:netty-common:4.1.130.Final",
        # Logging (2.25.3 fixes CVE-2025-68161)
        "org.apache.logging.log4j:log4j-core:2.25.3",
        "org.apache.logging.log4j:log4j-slf4j2-impl:2.25.3",
        # Database
        "org.jetbrains.exposed:exposed-core:0.54.0",
        "org.jetbrains.exposed:exposed-dao:0.54.0",
        "org.jetbrains.exposed:exposed-jdbc:0.54.0",
        "com.zaxxer:HikariCP:5.1.0",
        "org.xerial:sqlite-jdbc:3.49.1.0",
        # Crypto
        "org.bouncycastle:bcprov-jdk18on:1.80",
        # Test dependencies
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.18.1",
        "junit:junit:4.13.2",
        "org.jetbrains.kotlin:kotlin-test-junit:2.0.21",
        "io.ktor:ktor-server-test-host-jvm:3.0.2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = True,
)

use_repo(maven, "maven")
