module(
    name = "delerium_paste",
    version = "1.0.14",
)

# Java rules for Bazel (provides JDK toolchain)
bazel_dep(name = "rules_java", version = "9.5.0")

# Kotlin rules for Bazel (2.2.2 ships Kotlin 2.2.21, enabling Ktor 3.2+)
bazel_dep(name = "rules_kotlin", version = "2.2.2")

# Maven dependency resolution (Bzlmod-compatible)
bazel_dep(name = "rules_jvm_external", version = "6.10")

# Use maven extension
maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# Maven dependencies for the server
# Ktor 3.2.0: now possible with rules_kotlin 2.2.2 (Kotlin 2.2.21).
# Netty 4.2.4 overrides transitives from Ktor to address CVE-2025-55163, CVE-2025-24970, CVE-2025-58057, CVE-2025-67735, CVE-2025-25193.
# Log4j 2.25.3 addresses CVE-2025-68161 (2.24.1).
maven.install(
    artifacts = [
        # Ktor dependencies (3.0.2 -> 3.2.0)
        "io.ktor:ktor-server-core-jvm:3.2.0",
        "io.ktor:ktor-server-netty-jvm:3.2.0",
        "io.ktor:ktor-server-content-negotiation-jvm:3.2.0",
        "io.ktor:ktor-serialization-jackson-jvm:3.2.0",
        "io.ktor:ktor-server-cors-jvm:3.2.0",
        "io.ktor:ktor-server-compression-jvm:3.2.0",
        "io.ktor:ktor-server-call-logging-jvm:3.2.0",
        "io.ktor:ktor-server-rate-limit-jvm:3.2.0",
        # Netty overrides (security: 4.2.8.Final fixes CVE-2025-58057, CVE-2025-67735, CVE-2025-58056)
        "io.netty:netty-codec-http2:4.2.8.Final",
        "io.netty:netty-handler:4.2.8.Final",
        "io.netty:netty-codec:4.2.8.Final",
        "io.netty:netty-codec-http:4.2.8.Final",
        "io.netty:netty-codec-compression:4.2.8.Final",
        "io.netty:netty-common:4.2.8.Final",
        # Logging (2.25.3 fixes CVE-2025-68161)
        "org.apache.logging.log4j:log4j-core:2.25.3",
        "org.apache.logging.log4j:log4j-slf4j2-impl:2.25.3",
        # Database (Exposed 0.54.0 -> 0.61.0, HikariCP 5.1.0 -> 6.3.0)
        "org.jetbrains.exposed:exposed-core:0.61.0",
        "org.jetbrains.exposed:exposed-dao:0.61.0",
        "org.jetbrains.exposed:exposed-jdbc:0.61.0",
        "com.zaxxer:HikariCP:6.3.0",
        "org.xerial:sqlite-jdbc:3.49.1.0",
        # Crypto
        "org.bouncycastle:bcprov-jdk18on:1.80",
        # Test dependencies
        "com.fasterxml.jackson.module:jackson-module-kotlin:2.19.0",
        "junit:junit:4.13.2",
        "org.jetbrains.kotlin:kotlin-test-junit:2.2.0",
        "io.ktor:ktor-server-test-host-jvm:3.2.0",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    fetch_sources = True,
)

use_repo(maven, "maven")
